<resources>
    <string name="app_name">Food Planner</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="register">Register</string>
    <string name="reapet_passowrd">Repeat Password</string>
    <string name="_register">Register</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="terms">By Register You Agree On Our Terms Of Use</string>
    <string name="have_an_account">Have An Account ? LOGIN</string>
    <string name="login">LogIn</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tueday">Tue</string>
    <string name="wedday">Wed</string>
    <string name="thuday">Thu</string>
    <string name="friday">Fri</string>
    <string name="satday">Sat</string>
    <string name="plan_date">Week3.Sept.23</string>
    <string name="plan_name">Food Plan</string>
    <string name="dinner_text">Dinner</string>
    <string name="lunch_text">Lunch</string>
    <string name="breakfast_text">Breakfast</string>
    <string name="meal_country_name">Meal Country</string>
    <string name="meal_name">Meal Name</string>
    <string name="login_move_page">Login</string>
    <string name="sinUp_move_page">Sign Up</string>
    <string name="text_login_signup">Food Planner</string>
    <string name="welcom_back">Welcome Back</string>
    <string name="have_account_login">Don\'t have an account?Sign up</string>
    <string name="my_favourite">My Favourites</string>
    <string name="title_favourite_list">Title</string>
    <string name="des_fav_list">Country</string>
    <string name="title_fav_list">Title</string>
    <string name="desc_fav_list">Country</string>
    <string name="search">Search Here ……</string>
    <string name="button_filter">Filter</string>

    <string name="logout">Log out</string>
    <string name="name_profile">Name</string>
    <string name="email_profile">Email@google.com</string>
    <string name="information_person">Information</string>
    <string name="favourites_profile">Favourites</string>
    <string name="plans_profile">Plans</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_plans">My Plans</string>
    <string name="suggestion_meal">Suggestion for today</string>
    <string name="randum_meal">Meal for you</string>
    <string name="country_category">Country</string>
    <string name="log_out">Logout</string>
    <string name="go_home_from_profile">Back</string>
    <string name="email_login">Email</string>

    <string name="select_the_first_day_in_your_week">Select The First Day In Your Week</string>
    <string name="done">Done</string>
    <string name="backup_your_data">Backup Your Data</string>
    <string name="retreve_your_data">Retrieve Your Data</string>
    <string name="area_filter">Area</string>
</resources>