<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayoutPlan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout"
    >

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutDaysContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPlanTime"
        app:tabSelectedTextColor="@color/goald"
        app:tabTextColor="@color/teal_700">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemSunDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sunday" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemMonDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemTuesDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tueday" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemWednesDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wedday" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemThursDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thuday" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemFriDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemSaturDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satday" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/txtViewPlanTime"
        android:layout_width="138dp"
        android:layout_height="31dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="18dp"
        android:text="@string/plan_date"
        android:textAlignment="center"
        android:textColor="#014A44"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tabLayoutDaysContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="@+id/txtViewPlanName"
        app:layout_constraintTop_toBottomOf="@+id/txtViewPlanName" />

    <TextView
        android:id="@+id/txtViewPlanName"

        android:layout_width="205dp"
        android:layout_height="45dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="sans-serif"
        android:text="@string/plan_name"
        android:textAlignment="center"
        android:textColor="@color/second_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewdinnershow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:background="#B0ECEAEA"
        android:text="@string/dinner_text"
        android:textColor="#014A44"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewDinner"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewLunch" />

    <TextView
        android:id="@+id/textViewlunchshow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:background="#B2ECEAEA"
        android:text="@string/lunch_text"
        android:textColor="#014A44"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewLunch"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewBreakFast" />

    <TextView
        android:id="@+id/textViewbreakfastShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:background="#ECEAEA"
        android:text="@string/breakfast_text"
        android:textColor="#014A44"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewBreakFast"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/tabLayoutDaysContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBreakFast"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewlunchshow"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/textViewbreakfastShow" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLunch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewdinnershow"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/textViewlunchshow" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/textViewdinnershow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>