<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="35dp"
    app:cardBackgroundColor="@color/gray"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <TextView
        android:id="@+id/txtViewNameMealInPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/title_fav_list" />

    <TextView
        android:id="@+id/textViewAreaCategoryMealInPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/des_fav_list" />

    <ImageView
        android:id="@+id/imgViewDeleteMealInPlan"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:contentDescription="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintVertical_bias="0.407"
        app:srcCompat="@drawable/deleteicon"
        tools:ignore="ImageContrastCheck" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewMealInPlan"
        android:layout_width="118dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"

        android:layout_marginTop="6dp"
        android:layout_marginBottom="20dp"
        app:civ_border_color="@color/lightGreen"
        app:civ_border_width="1dp"
        app:srcCompat="@drawable/picfood" />

</androidx.cardview.widget.CardView>