<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:layoutDirection="ltr"
    tools:context=".app_vp.view.Splash_fScreen">


    <View
        android:id="@+id/containerUname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/corners_signup"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
    </View>

    <EditText
        android:id="@+id/editTxtUNameLogIn"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@null"
        android:drawableStart="@drawable/person"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/containerUname"
        app:layout_constraintEnd_toEndOf="@+id/containerUname"
        app:layout_constraintStart_toStartOf="@+id/containerUname"
        app:layout_constraintTop_toTopOf="@+id/containerUname"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />



    <View
        android:id="@+id/viewContainerEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/corners_signup"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerUname">
    </View>

    <EditText
        android:id="@+id/editTxtEmailSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@null"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/viewContainerEmail"
        app:layout_constraintEnd_toEndOf="@+id/viewContainerEmail"
        app:layout_constraintStart_toStartOf="@+id/viewContainerEmail"
        app:layout_constraintTop_toTopOf="@+id/viewContainerEmail"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />



    <View
        android:id="@+id/viewContainerPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/corners_signup"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewContainerEmail">
    </View>

    <EditText
        android:id="@+id/editTxtPassLogIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:background="@null"
        android:drawableStart="@drawable/password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/passowrd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/viewContainerPassword"
        app:layout_constraintEnd_toEndOf="@+id/viewContainerPassword"
        app:layout_constraintStart_toStartOf="@+id/viewContainerPassword"
        app:layout_constraintTop_toTopOf="@+id/viewContainerPassword"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />



    <View
        android:id="@+id/viewContainerrePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/corners_signup"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewContainerPassword">
    </View>

    <EditText
        android:id="@+id/editTxtRePassSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@null"
        android:drawableStart="@drawable/password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/reapet_passowrd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/viewContainerrePassword"
        app:layout_constraintEnd_toEndOf="@+id/viewContainerrePassword"
        app:layout_constraintStart_toStartOf="@+id/viewContainerrePassword"
        app:layout_constraintTop_toTopOf="@+id/viewContainerrePassword"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="277dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btnsignup"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_your_account"
        android:textColor="#0F121B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:text="@string/terms"
        android:textAlignment="center"
        android:textColor="#0F121B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewContainerrePassword"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewHaveAccountLogIn"
        android:layout_width="217dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/have_an_account"
        android:textAlignment="center"
        android:textColor="#0F121B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imgViewLogin"
        android:layout_width="153dp"
        android:layout_height="131dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adduser" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="77dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHaveAccountLogIn"
        app:srcCompat="@drawable/googleicon" />

</androidx.constraintlayout.widget.ConstraintLayout>